<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".presentation.view.ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.MyApplication">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:expandedTitleGravity="top"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
            app:titleCollapseMode="fade"
            app:toolbarId="@+id/toolbar">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/manImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:adjustViewBounds="true"
                android:fitsSystemWindows="true"
                android:paddingTop="?attr/actionBarSize"
                android:src="@drawable/image_man" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/leaf"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/Theme.MyApplication"
                app:titleTextAppearance="@style/TextStyle2"
                app:titleTextColor="@color/white">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/editButtonImage"
                        android:layout_width="@dimen/profile_edit_button_width"
                        android:layout_height="@dimen/profile_edit_button_width"
                        android:layout_marginEnd="@dimen/profile_edit_button_margin_end"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_edit" />

                    <TextView
                        android:id="@+id/profileHeaderTextView"
                        style="@style/TextStyle2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/officina_sans_scc_extrabold"
                        android:text="@string/title_profile"
                        android:textAppearance="@style/TextStyle2"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Space
                android:id="@+id/profile_margin_space"
                android:layout_width="@dimen/profile_barrier"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="@dimen/profile_barrier"
                android:layout_height="wrap_content"
                app:barrierDirection="right"
                app:constraint_referenced_ids="profile_margin_space"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/pushNotificationsSwitch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/profile_switch_top_margin"
                android:layout_marginEnd="@dimen/profile_switch_end_margin"
                android:focusedByDefault="false"
                android:text="@string/get_push_notifications"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextStyle8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/barrier"
                app:layout_constraintTop_toBottomOf="@+id/professionText" />

            <Button
                android:id="@+id/logout_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="@dimen/profile_logout_button_width"
                android:layout_height="@dimen/profile_logout_button_height"
                android:layout_marginTop="@dimen/profile_logout_button_top_margin"
                android:backgroundTint="@color/leaf"
                android:fontFamily="sans-serif-medium"
                android:includeFontPadding="false"
                android:text="@string/logout_button"
                android:textAlignment="center"
                android:textAppearance="@style/TextStyle7"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dividerBottom" />

            <View
                android:id="@+id/dividerBottom"
                android:layout_width="match_parent"
                android:layout_height="@dimen/profile_divider_height"
                android:layout_marginTop="@dimen/profile_bottom_divider_top_margin"
                android:background="@color/cool_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/friend1Photo" />

            <TextView
                android:id="@+id/friend2Name"
                style="@style/TextStyle8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/profile_friends_left_margin"
                android:text="@string/friend_2"
                app:layout_constraintStart_toEndOf="@+id/friend2Photo"
                app:layout_constraintBottom_toBottomOf="@+id/friend2Photo"
                app:layout_constraintTop_toTopOf="@+id/friend2Photo"/>

            <TextView
                android:id="@+id/friend1Name"
                style="@style/TextStyle8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/profile_friends_left_margin"
                android:text="@string/friend_1"
                app:layout_constraintStart_toEndOf="@+id/friend1Photo"
                app:layout_constraintTop_toTopOf="@+id/friend1Photo"
                app:layout_constraintBottom_toBottomOf="@+id/friend1Photo"/>

            <ImageView
                android:id="@+id/friend1Photo"
                android:layout_width="@dimen/profile_friend_image_size"
                android:layout_height="@dimen/profile_friend_image_size"
                android:layout_marginTop="@dimen/profile_margin_between_friends_photos"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toStartOf="@id/barrier"
                app:layout_constraintTop_toBottomOf="@id/friend2Photo"
                app:srcCompat="@drawable/avatar_1" />

            <ImageView
                android:id="@+id/friend2Photo"
                android:layout_width="@dimen/profile_friend_image_size"
                android:layout_height="@dimen/profile_friend_image_size"
                android:layout_marginTop="@dimen/profile_margin_between_friends_photos"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toStartOf="@id/barrier"
                app:layout_constraintTop_toBottomOf="@+id/friend3Photo"
                app:srcCompat="@drawable/avatar_2" />

            <ImageView
                android:id="@+id/friend3Photo"
                android:layout_width="@dimen/profile_friend_image_size"
                android:layout_height="@dimen/profile_friend_image_size"
                android:layout_marginTop="@dimen/profile_first_friend_top_margin"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toStartOf="@id/barrier"
                app:layout_constraintTop_toBottomOf="@+id/friendsHeader"
                app:srcCompat="@drawable/avatar_3" />

            <TextView
                android:id="@+id/friend3Name"
                style="@style/TextStyle8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/profile_friends_left_margin"
                android:text="@string/friend_3"
                app:layout_constraintStart_toEndOf="@+id/friend3Photo"
                app:layout_constraintTop_toTopOf="@+id/friend3Photo"
                app:layout_constraintBottom_toBottomOf="@+id/friend3Photo"/>

            <TextView
                android:id="@+id/friendsHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/profile_friends_header_margin_top"
                android:text="@string/your_friends_header"
                app:layout_constraintStart_toStartOf="@id/barrier"
                app:layout_constraintTop_toBottomOf="@id/dividerTop" />

            <View
                android:id="@+id/dividerTop"
                android:layout_width="match_parent"
                android:layout_height="@dimen/profile_divider_height"
                android:background="@color/cool_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pushNotificationsSwitch" />

            <TextView
                android:id="@+id/birthDateText"
                style="@style/TextStyle8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birth_date_value"
                app:layout_constraintStart_toStartOf="@id/barrier"
                app:layout_constraintTop_toBottomOf="@+id/birthDateHeader" />

            <TextView
                android:id="@+id/professionHeader"
                style="@style/TextStyle15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/profile_margin_between_info_headers"
                android:text="@string/profession_header"
                app:layout_constraintStart_toStartOf="@id/barrier"
                app:layout_constraintTop_toBottomOf="@+id/birthDateText" />

            <TextView
                android:id="@+id/professionText"
                style="@style/TextStyle8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profession_value"
                app:layout_constraintStart_toStartOf="@id/barrier"
                app:layout_constraintTop_toBottomOf="@+id/professionHeader" />

            <TextView
                android:id="@+id/birthDateHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/profile_birth_date_header_top_margin"
                android:text="@string/birth_date_header"
                android:textAppearance="@style/TextStyle15"
                app:layout_constraintStart_toStartOf="@id/barrier"
                app:layout_constraintTop_toBottomOf="@+id/manNameText" />

            <TextView
                android:id="@+id/manNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/profile_name_margin_top"
                android:fontFamily="sans-serif"
                android:text="@string/profile_name"
                android:textAppearance="@style/TextStyle12"
                android:textSize="@dimen/profile_name_text_size"
                app:layout_constraintStart_toStartOf="@id/barrier"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>


